--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,13 +3,13 @@ name: Build & Release
 on:
   push:
     tags:
-      - 'v*' # Trigger ONLY when you push a tag like v1.0.1
+      - 'v*'
 
 jobs:
   release:
     runs-on: ubuntu-latest
     permissions:
-      contents: write # Needed to create releases
+      contents: write
 
     steps:
       - uses: actions/checkout@v4
@@ -21,16 +21,17 @@ jobs:
           java-version: '17'
           cache: 'gradle'
 
-      - name: Build Release APK
+      - name: Build Debug APK (Auto-Signed)
         run: |
           chmod +x ./gradlew
-          ./gradlew assembleRelease
+          ./gradlew assembleDebug
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: app/build/outputs/apk/release/*.apk
+          # Note: The path changes from 'release' to 'debug'
+          files: app/build/outputs/apk/debug/*.apk
           draft: false
           prerelease: false
         env:
